# bionumpydantic

./: HISTORY.rst  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py
bionumpydantic/: __init__.py  bionumpydantic.py  cli.py  pydantic_type_wrappers.py
docs_source/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
scripts/: some_example.py
tests/: __init__.py  test_bionumpydantic.py  test_pydantic_wrappers.py
